@@ -13,6 +13,7 @@ searches.
 
 Added the mini-photo to register, markbook and report lists.
 
+Fix to the file delete function for icon photos.
 
 
 Version ClaSS-1.0.49 release (2013/06/12)
